--- a/src/data/grammar/mtg-pros.yaml
+++ b/src/data/grammar/mtg-pros.yaml
@@ -57,20 +57,20 @@
       "WOTC",
       "Magic players",
       "Wizards",
-      "Sorcerers",
+      "sorcerers",
       "MODO players",
-      "MTGO Developers",
-      "Judges",
-      "Grinders",
-      "Casual players",
-      "Forum posters",
-      "Facebook Commenters",
+      "MTGO developers",
+      "judges",
+      "grinders",
+      "casual players",
+      "forum posters",
+      "Facebook commenters",
       "'You Make The Card' participants",
       "The Future Future League",
-      "The pro's",
-      "Barns",
-      "Scrubs",
-      "Hall of Famers",
+      "the pro's",
+      "barns",
+      "scrubs",
+      "hall of famers",
       "#psychographics#"
   ],
   "psychographics": [
