--- a/src/data/grammar/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/mtg-card-of-the-day.yaml
@@ -1,10 +1,11 @@
 ---
 cotdImage:
-  # - "[_cardname:#realCard#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  # - "[#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  # - "[#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "[_cardname:#realCard#][#cotdCardNameSearch#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "[#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "[#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
   - "[_cotdDescription:#cotdCustomQueryDecscription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
 
+cotdCardNameSearch: "#_cardName#[#_cardname.cardSearchByName(1)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSearchByType(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_creatureType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCardCategorySearch: "[_cardText:#_cardCategorySearchTerm#][#_cardText.cardSearchByText(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardCategory#][_cardDescCategory:#_cardCategoryClass#]"
@@ -25,7 +26,7 @@ cotdTitle:
   - CARD OF THE DAY
 
 cotdDescription:
-  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword# coming back, we can't promise that any keyword is really off the menu moving forward."
+  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
   - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
   - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
   - "Every player aspires to have as many [_cardlinkName:#_cardname.s#]#_cotdHtmlCardLink# as they have #colors# #deckArchOrCategory# decks."
@@ -37,6 +38,7 @@ cotdTextDescription:
   - "If you think this #cardQuality# #_cardDesc# only fits into [_deckType:#_cardColor1#,#deckLimitedArchetype#,#deck#]#_deckType# decks, you may need to reconsider your #format# strategies."
   - "[#cotdCardCategorySearch#]One of the best [_kindOfCard:#_cardRarity1#,#_cardType1#,#_cardDesc#]#_kindOfCard.lowercase.s# in [_italicText:#_cardSet1#]#_italicize# Limited right here. Turns out  [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink# is still one of #_cardColor1#'s #cardSuperlative# [_otherKindOfCard:#cardCategory#,#_cardDesc#]#_otherKindOfCard.s#."
   - "[#cotdCardCategorySearch#]#_cardColorClass1.capitalize#, #cardQuality# #_cardDescCategory# will always be [_position:an unavoidable part of,a necessary evil in,at a premium in,a commodity in,#kindaGood# in]#_position# #popularFormat#, [_authority:Development,Mark Rosewater,Hasbro,the Future-Future League][_rigid:extremely rigid,militant,inconsistent,incomprehensible,ludicrous,unreasonably firm][_qualifier:unfortunately,like it or not,thanks to #_authority#'s #_rigid# stance on #_cardDescCategory#,regardless of the cost,thanks to the New World Order,because of reasons,because of the Reserved List,and always has been]#_qualifier#. Though sticking it on [_cardlinkName:#cardAlone#][_surface:#_cardtype.lowercase.a#,#cardCategory.lowercase.a#,#_cotdHtmlCardLink.a# variant]#_surface# [_result:certainly helps,certainly helps,doesn't help,really changes things,makes no sense,makes a certain kind of sense,certainly might make you resonsider it,is a clumsy approach to fixing this, is a feeble way to remedy this]#_result#."
+  - "This [_preDesc:,#cardQuality# ]#_preDesc##_cardDesc# has had [_who:#pros#,#psychographics#,#pro#,#person#][_reactionVerb:salivating,drooling,giggling,dancing,cartwheeling,rejoicing,grumbling,talking,confused,making predictions,trying to break it,calling for its banning][_verbing:#_reactionVerb#,#verbIntransitiveGerund#]#_who# #_verbing# since it was [_verbed:first revealed,first spoiled,first unbanned,first printed,reprinted]#_verbed#."
 
 cotdCreatureTypeDescription:
  - "Only on #plane# would people see this #adjImpressive# #_creatureType# and nickname it [_nickname:The #adj.capitalizeAll.hyphenate# #characterClass.capitalizeAll#,#planeswalkerFirstName#'s #characterClass.capitalizeAll#]“#_nickname#”."
@@ -48,6 +50,8 @@ cotdCreatureTypeDescription:
  - "If you're looking to beef up #character#'s tribal support next [_date:business day,weekend,week,month,week,month,year,year,decade,century]#_date#, make sure to look at the #_creatureType.capitalizeAll# tribal pushes [_italicText:#cardSet#][_pastSet1:#_italicize#][_italicText:#_cardset#][_pastSet2:#_italicize#][_futureSet:#teaserCardSet#,#novelCardSetName#][_italicText:#_futureSet.capitalizeAll#][_futureSetText:we're making in #_italicize#][_madeOrAreMaking:we made back in #_pastSet1# and #_pastSet2#,#_futureSetText#]#_madeOrAreMaking#."
  - "Finally, after months of staring at [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink#, we finally know what gift awaits the [_adj:chosen,devoted,devout,faithful,pious,righteous,worthy,#adj#]#_adj# [_beings:inhabitants,denizens,disciples]#_beings# of #plane#: eternal servitude to the #_creatureType.capitalizeAll.hyphenate#-#characterClass.capitalizeAll.hyphenate# [_cardlinkName:#_cardname#]#_cotdHtmlCardLink#!"
  - "#_creatureType.capitalizeAll# [_doctors:psychologists,behaviorists,therapists]#_doctors# will tell you that [_dreams:dreams,nightmares]#_dreams# about #_badDream# are very common. Unfortunately for this #_creatureType#, it isn't a dream. How [_dreamFeeling:embarrassing,distressing,terrifying,heartbreaking,awful,unfortunate,ominous,disturbing,hilarious,disastrous,appalling,awkward]#_dreamFeeling#."
+ - "It started with \"How do you give #_cardSubtype1.s# [_italicText:#keyword.lowercase#]#_italicize#?\" and ended with [_italicText:#keyword.lowercase#][_q:How do you give #_cardSubtype1.a# #_italicize#,What would #_cardSubtype1.a# made out of #massNoun# look like,Why bother,Who cares,Why don't you just follow the design file,Can we design #cardCategory.a# instead,What's for lunch]\"#_q#?\" [_obv:Obviously,Suffice it to say,As you can see for yourself]#_obv#, #_cardName1#[_result:'s playtest went well,'s final design doesn't disappoint,'s printed version answers none of these questions, turned out to be a real mess, turned out great]#_result#."
+ - "The only thing left to make #_creatureType.capitalize# tribal viable[_where:, now, in #format#]#_where# is...[_what:a lot more #_creatureType.s#,a few #_creatureType# lords,#_creatureType.a# that's actually playable,probably a playable #cardCategory# or two,about #count# more cards,about a million other cards,actually we have no idea,nothing. It's never going to be playable#comma# sorry]#_what#."
 
 cotdCardNameWordPair_And:
   - "[separator:and][#separator.cardSearchTwoParter(1,\\w+ of)#][_pairWord1:#_cardNameFirstPart1#][_pairWord2:#_cardNameSecondPart1#]"
@@ -76,12 +80,12 @@ cotdCustomQueryDecscription:
   [#cotdLegendaryCreatureSearch#]
   [_legendImgUrl:#_cardImgUrl1#][_legendSubtype:#_cardSubtype1#]#_legendName# has [_agenda:a plan,an agenda,a bright idea,a mission in life,a puzzle to solve,a philosophical question to ponder,homework to do,a survey to conduct,dispute to settle,a bee in their bonnet]#_agenda#. They're going to [_solve:decide,answer the question of,find out,finally determine,ask #planeswalkerFirstName#]#_solve# #cotdWordPairPonderable#.[_cardImgUrl1:#_legendImgUrl#]
  - >  
-  [_customQuery:t=aura t|=artifact][#cotdCustomSearch#]
-  Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to [_adhere:stick,slap,affix]#_adhere# some #massNoun.hyphenate#-infused [_equipmentPart:#bodypart# armor,blades,spikes,bracers,pauldrons,gauntlets,rivets,ribbons,pinstripes,toothpicks,pipe cleaners,pom poms,rhinestones]#_equipmentPart# onto what appears to be [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface.a#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll,charge,barrel,plow]#_verb# [_intoBattle:into battle,into the fray,into combat,into the red zone,through the breach,into the kill zone,into the night,#sweepSpellMove#]#_intoBattle#.
+  [_customQuery:t=aura t|=equipment t|=artifact][#cotdCustomSearch#]
+  Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to [_adhere:stick,slap,affix]#_adhere# some #massNoun.hyphenate#-infused [_equipmentPart:#bodypart# armor,blades,spikes,bracers,pauldrons,gauntlets,rivets,ribbons,pinstripes,toothpicks,pipe cleaners,pom poms,rhinestones]#_equipmentPart# onto what appears to be [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface.a#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll,charge,barrel,plow]#_verb# [_intoBattle:into battle,into the fray,into combat,into the red zone,through the breach,into the kill zone,into the night]#_intoBattle#.
  - >
-   [#cotdLegendaryCreatureSearch#][_petOwner:#_cardName1#,#character#]
+   [#cotdLegendaryCreatureSearch#][_cardlinkName:#_cardName1#][_petOwner:#_cotdHtmlCardLink#,#character#]
    [#cotdCreatureTypeSearch#]
-   [_cardlinkName:#_petOwner#]#_cotdHtmlCardLink#'s [_adj:loyal,faithful,trusty,obedient,frisky,adopted,beloved,pampered,favorite,well-trained,ill-tempered,housebroken]#_adj# pet #_cardSubtype1.capitalize# is a bit #adjComparative# than they are, but it's still #adj#.
+   #_petOwner#'s [_adj:loyal,faithful,trusty,obedient,frisky,adopted,beloved,pampered,favorite,well-trained,ill-tempered,housebroken]#_adj# pet #_cardSubtype1.capitalize# is a bit #adjComparative# than they are, but it's still #adj#.
 _badDream:
 - "[_discovery:getting lost at,being naked at,being late to,being teased at,#verbIntransitiveGerund# in,flunking out of][_schoolType:#_creatureType#,#characterClass#][_italicText:#_discovery# #_schoolType# school]#_italicize#"
 - "[_fate:suffocating in a pool of,getting stuck hip-deep in,becoming permanently trapped beneath a mound of,getting lost in a cloud of,drowning in a sea of]#_fate# [_italicText:#massNoun#]#_italicize#"
@@ -113,13 +117,6 @@ cardSuperlative:
 - narrowest
 - best
 - worst
-
-sweepSpellMove:
-  - across the Araba
-  - down Sokenzan
-  - into Takenuma
-  - through Reito
-  - through the Blind Eternities
 
 interestingPlayAdj:
   - hilarious
@@ -229,6 +226,9 @@ surprisingResult:
   - "you get to return it to your hand"
   - "you can combo it with #cardAlone#"
   - "it's going to be #rarity.a# in [_italicText:#teaserCardSet.capitalizeAll#]#_italicize#"
+  - "it's #_cardRarity1.lowercase.a#"
+  - "it's #_cardtype.lowercase.a#"
+
 
 cardWhichDrawsCards:
   - Impulse
