--- a/src/data/grammar/bodyparts.yaml
+++ b/src/data/grammar/bodyparts.yaml
@@ -29,7 +29,10 @@
     "skeleton",
     "thumb",
     "shin",
-    "bellybutton"
+    "bellybutton",
+    "fang",
+    "claw",
+    "feather"
    ],
 
   "bodypartsInPairs": [
@@ -63,7 +66,10 @@
     "pinkie toes",
     "thumbs",
     "shins",
-    "bellybutton"
+    "bellybutton",
+    "fangs",
+    "claws",
+    "feathers"
   ],
 
   "bodypartsInternal": [
