fuel for the flavor

--- a/src/data/grammar/mtg-characters.yaml
+++ b/src/data/grammar/mtg-characters.yaml
@@ -55,6 +55,7 @@
       "Gerrard#malePronouns#",
       "General Varchild#malePronouns#",
       "Grakk#malePronouns#",
+      "Grick Doobin#malePronouns#",
       "Griselbrand#malePronouns#",
       "Hanna#femalePronouns#",
       "Hans#malePronouns#",
