--- a/src/data/grammar/headlines/flavor-text.yaml
+++ b/src/data/grammar/headlines/flavor-text.yaml
@@ -70,6 +70,27 @@ flavorText:
     "The #creatureTypes# #verbIntransitivePastTense# #relativePreposition# me, and in that moment [_myName:#commonCharacterFirstName#]#_myName# the #adj.capitalize# died and I was born." —#_myName# the #adj.capitalize#
   - >
     "[_sound:#nounActionSound#,#soundEmanation#]#_sound.capitalizeAll# of [_noisyThing:#creatureTypes#,#characterClass#,#concreteNoun#]#_noisyThing# and #soundEmanation# of #creatureTypes# [_getQuiet:fall mute,fall silent,are struck dumb]#_getQuiet# when #creatureTypes.s# [_rally:sound the Call to,sing the Hymn to,recite the Prayer to,quote the Book of,hum the tune of,sing the praises of,sing the Song of][_theRevered:#character#,#abstractMassOrPluralNounGameConceptOrEmotion#]#_rally# #_theRevered.capitalizeAll#."
+  - >
+    "[_hypothetically:Maybe,Perhaps,I bet,I doubt,Let's hope,I wonder if]#_hypothetically# we can #verbInceptiveTransitive# them with #pluralNounOrMassNoun#," thought #character#, #verbTransitiveGerund# #character#.
+  - >
+    "[_firstVerb:#verbInceptiveIntransitive#][_verb:#_firstVerb#][_secondVerb:#verbInceptiveTransitive#][#placeOrPeopleVerbPluralAgreement#][_object:#_placeOrPeople#]Some days you #_firstVerb# to #_secondVerb# the #_object#. Other days the #_object# #_verbs# to #_secondVerb# you."
+  - >
+   "When the #placeNoun.s# are #adj# and the [_thing:#itemNoun#,#characterClass#,#creatureTypes#]#_thing.s# are #verbTransitivePastTense#, [#somePronoun#]#they# will take #their# rightful place as #characterClass# of the #placeNounCanonical#." —#npcCharacter#
+  - >
+    "Only #adj.a# few are [_allowed:allowed,permitted,invited,welcome]#_allowed# within the #adj# [_place:#placeNoun#,#placeNounCanonical#]#_place# known as [_place:#minorStoryLocation#,#nonPlaneLocation#]#_place#."
+  - >
+    "I [_forge:forge,shape,fashion,fabricate]#_forge# my #itemNoun.s# from the #abstractNoun# of my enemies." —#npcCharacter#
+
+
+newFlavorText:
+  - >
+    "The #creatureTypeOrCharacterClass.s# of [_place:#minorStoryLocation#,#nonPlaneLocation#]#_place# treat each #itemNoun# with #emotion# for the #creatureTypeOrCharacterClass# it will become."
+
+placeOrPeopleVerbPluralAgreement:
+- "[_placeOrPeople:#placeNoun#][_verbs:#_verb.s#]"
+- "[_placeOrPeople:#placeNounCanonical#][_verbs:#_verb.s#]"
+- "[_placeOrPeople:#creatureTypeOrCharacterClass.s#][_verbs:#_verb#]"
+
 
 verbLifestyleAction:
 - fight
