--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -84,6 +84,7 @@
   	"Agathe",
   	"Borzard",
   	"Brigone",
+    "Chaeska",
   	"Chadir",
   	"Devin",
   	"Galanda",
@@ -139,18 +140,6 @@
     "#commonCharacterFirstName#, #characterTitleObjectNoun.capitalizeAll# [_role:adept,avenger,guardian,hero,master,tyrant,witch]#_role.capitalize#",
     "#commonCharacterFirstName#, [_how:First,Last]#_how# to #verbIntransitive.capitalize#"
   ],
-  "characterClass": [
-  	"master", "warlord", "avenger", "champion", "explorer", "pirate", "chieftain", "conqueror", "god", "assassin", "oracle", "ghost",
-    "knave", "defender","ancient", "master", "prisoner", "buffoon", "baby", "clown", "villain", "freak", "fiend", "titan", "horror",
-    "cyborg", "ambassador", "agent", "mercenary", "cowboy", "mime", "architect", "inventor", "guardian", "groundskeeper", "farmer",
-    "doctor", "thief", "judge", "juror", "executioner", "herald", "betrayer", "savior", "disciple", "rebel", "crybaby", "grinch",
-    "barrista", "charlatan", "imposter", "bandit", "governor", "teenager", "prince", "princess", "artist", "warlock", "servant", "chef",
-    "minion", "nomad", "protector", "navigator", "houndmaster", "alchemist", "commander", "leader", "predator", "constable", "merchant",
-    "priest", "ancestor", "martyr", "monarch", "voyager", "general", "victim", "customer", "seeker", "automaton", "keeper", "genius",
-    "gymnast", "demagogue", "malcontent", "maniac", "bookworm", "egghead", "ringleader", "ringmaster",  "gatekeeper", "keymaster",
-    "survivor", "vegan", "renegade", "flunky", "henchman", "emissary", "orphan", "enemy", "commander", "vagrant", "vagabond", "puppet",
-    "dog catcher", "coward", "citizen", "heretic", "fugitive", "outlaw", "pharaoh", "emperor", "empress"
- 	],
   "characterTitle": [
   	"#characterClass#",
   	"#characterClass#",
