--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -107,6 +107,9 @@ graphicAnnouncement:
 fromTheVaultGraphicAnnouncement:
 - "Wizards Announces: From the Vault: [_vaultContents:#_fromTheVaultVaultContents#]#_vaultContents.capitalize# {htmlImg htmlImgString=`#fromTheVaultLogoImage#`}"
 
+duelDecksGraphicAnnouncement:
+- "[#_duelDecksCombatants#]Wizards Announces: Duel Decks: #_duelDecksCombatant1.capitalize# vs. #_duelDecksCombatant2.capitalize# {htmlImg htmlImgString=`#duelDecksLogoImage#` screenWidth=`2048` screenHeight=`400`}"
+
 novelSetGraphicAnnouncement:
 - 'Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset# #mtgSetLogoSplash#'
 - "[_nextSet:The next set,The next fall set,The next spring set,#codename.capitalize#][_verbphrase:is
